Fix Responsive issue

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
     <link rel="stylesheet" href="https://unpkg.com/lxgw-wenkai-webfont/style.css">
 
-    <link rel="icon" type="image/png" href="/src/logo-sq-blue.png">
+    <link rel="icon" type="image/png" href="/src/logo">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -60,7 +60,7 @@
             
             <!-- 右边空div区域 15% -->
             <div class="right-empty-section">
-              <button class="enquire-btn"></button>
+              <button class="enquire-btn">English</button>
             </div>
           </div>
         </div>
