Updated and fix responsive bugs.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             
             <!-- 右边空div区域 15% -->
             <div class="right-empty-section">
-              <button class="enquire-btn">English</button>
+              <a href="https://futureaus.com.au/" class="enquire-btn">English</a>
             </div>
           </div>
         </div>
@@ -309,7 +309,7 @@
             </div>
 
             <div class="footer-column">
-              <h4>CONTACT</h4>
+              <h4>联系我们</h4>
               <br />
               <p>32/1000 Ann Street, <br />Brisbane QLD 4006</p>
               <br />
@@ -318,7 +318,7 @@
             </div>
 
             <div class="footer-column">
-              <h4>QR Code</h4>
+              <h4>微信二维码</h4>
               <img src="/src/QR code.jpg" alt="QR Code">
             </div>
           <!-- </div> -->
