--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
     <link rel="stylesheet" href="https://unpkg.com/lxgw-wenkai-webfont/style.css">
 
-    <link rel="icon" type="image/png" href="/src/logo">
+    <link rel="icon" type="image/png" href="/src/logo-sq-blue.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
